--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: 达州天立学校初一一班
-brief-intro: A place where to show own class!
+brief-intro: A place to show my class!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://2385509959.github.io" # the base hostname & protocol for your site
 
