--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 达州天立学校初一一班
-brief-intro: A place to show my class!
+title: 广元天立**平台
+brief-intro: A place to show myself!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://2385509959.github.io" # the base hostname & protocol for your site
 
