--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 广元天立**平台
+title: 广元天立赌博平台
 brief-intro: A place to show myself!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://2385509959.github.io" # the base hostname & protocol for your site
